--- a/index.html
+++ b/index.html
@@ -6,28 +6,33 @@
     <link href="resources/css/style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
-    <h1>Broadway Design</h1>
-    <p>Home</p>
-    <p>About</p>
-    <p>Work</p>
-    <p>Team</p>
-    <p>Contact</p>
-    <h2>Our Process</h2>
-    <h3>Identity</h3>
+    <div id="header">
+      <h1>Broadway Design</h1>
+      <p><a href="index.html">Home</a></p>
+      <p><a href="#process">Process</a></p>
+      <p><a href="#work">Work</a></p>
+      <p><a href="#team">Team</a></p>
+      <p><a href="#contact">Contact</a></p>
+    </div>
+    <h2 id="process">Our Process</h2>
+    <p><img src="resources/images/identify.svg"></p>
+    <h3>Identify</h3>
     <p>We focus on the most important details.</p>
+    <p><img src="resources/images/understand.svg"></p>
     <h3>Understand</h3>
     <p>We study our projects inside and out.</p>
+    <p><img src="resources/images/execute.svg"></p>
     <h3>Execute</h3>
     <p>We put everything we have into our work.</p>
-    <h3>Portfolio</h3>
+    <h3 id="design">Designed in New York</h3>
+    <h3 id="work">Portfolio</h3>
     <p>Coming Soon</p>
-    <h3>Team</h3>
+    <h3 id="team">Team</h3>
     <p>We're Hiring!</p>
-    <h3>Contact</h3>
+    <h3 id="contact">Contact</h3>
     <p>Phone: (555)-555-5555</p>
     <p>E-mail: test@example.com</p>
     <p>Twitter: @test</p>
-    <p id="copy">&copy; Broadway 2017 <a>Home</a> <a>About</a> <a>Work</a> <a>Team</a> <a>Contact</a></p>
-
+    <p id="copy">&copy; Broadway 2017 <a href="index.html">Home</a> <a href="#process">About</a> <a href="#work">Work</a> <a href="#team">Team</a> <a href="#contact">Contact</a></p>
   </body>
 </html>
